--- a/packages/next-app/package.json
+++ b/packages/next-app/package.json
@@ -26,6 +26,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-ipfs-image": "^0.7.0",
     "wagmi": "^0.6.0",
     "web3.storage": "^4.4.0"
   }
