--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -7,3 +7,8 @@ MUMBAI_ALCHEMY_API_URL=
 POLYGONSCAN_KEY=
 PRIVATE_KEY=
 MNEMONIC=
+ENDPOINT_URL_SKALE=
+API_URL=
+BLOCKEXPLORER_URL=
+ETHERSCAN_API_KEY=
+PRIVATEKEY_sFUEL= 
