--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
