--- a/packages/next-app/package.json
+++ b/packages/next-app/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@types/react": "18.0.25",
     "eslint": "^8.16.0",
-    "eslint-config-next": "^12.1.6"
+    "eslint-config-next": "^12.1.6",
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
@@ -20,6 +22,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@rainbow-me/rainbowkit": "^0.4.5",
+    "@worldcoin/id": "^0.9.2",
     "ethers": "^5.6.9",
     "framer-motion": "^6",
     "next": "^12.1.6",
